--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ms",
-  "version": "2.1.3",
-  "description": "Tiny millisecond conversion utility",
-  "repository": "vercel/ms",
+  "name": "betterMsJs",
+  "version": "2024.10.06",
+  "description": "Millisecond conversion tool with support for multiple time units in a single input string",
+  "repository": "gae-labs/betterMsJs",
   "main": "./index",
   "files": [
     "index.js"
