[+Add] Completely new format() function [-Remove] Tests broken by new format function [+Add] New tests for new multiple unit formatting and new options [#Fix] eslint

--- a/package.json
+++ b/package.json
@@ -12,21 +12,13 @@
   ],
   "scripts": {
     "precommit": "lint-staged",
-    "lint": "eslint lib/* bin/*",
+    "lint": "eslint *.js",
     "test": "mocha tests.js"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "env": {
-      "node": true,
-      "es6": true
-    }
   },
   "lint-staged": {
     "*.js": [
       "npm run lint",
-      "prettier --single-quote --write",
-      "git add"
+      "prettier --single-quote --write"
     ]
   },
   "license": "MIT",
